[tool.poetry]
name = "pyspock"
version = "0.3.0"
description = "Python implementation for spock framework"
authors = ["ZhengYu, Xu <zen-xu@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["test", "unittest", "spock", "bdd"]
packages = [
    { include = "spock", from = "src" },
    { include = "_spock", from = "src" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: BDD",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
commitizen = "^2.17.13"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"

[tool.poetry.plugins.pytest11]
spock = "_spock.plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["tests"]
filter_files = true

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if LESS_PY38:",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
version_files = [
    "pyproject.toml:version",
    "src/_spock/__init__.py",
    "tests/test_version.py",
]
